while/tests/valid/RealDiv_Valid_1.while
real g(int x) {
     return ((real)x) / 3.123;
}

real f(int x, int y) {
    return g(x);
}

void main() {
     print f(1,2);
}
