while/tests/invalid-parsing/Parsing_Invalid_16.while
{int x, int y} f() {
     return {x: 1, x: 2, y: 3};
}